app/assets/stylesheets/components/_lesson.scss
.lesson-progression {
  width: 27%;
}

.lesson-image {
  text-align: center;
  z-index: -1;
}

.lesson-container {
  padding: 1rem;
  box-shadow: 0px 4px 16px rgba(0,0,0,0.2);
  height: 70vh;
  position: relative;
  top: -70px;
  background: white;
  z-index: 0;
}

.poem-img {
  padding: 119px 0;
  margin-bottom: 30px;
}

.lesson-show {
  position: relative;
}

.lesson-author {
  position: absolute;
  background-color: #ffffff;
  border-radius: 16px;
  padding: 1px 16px;
  top: -46px;
  left: 17px;
  font-size: 20px;
  font-weight: bold;
  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.16);
}

.lesson-back {
  position: absolute;
  // color: #ffffff;
  top: -258px;
  left: 5px;
  font-size: 24px;
  a {
    color: #ffffff;
    opacity: 0.7;
  }
}

.progressbar-text {
  font-size: 26px;
  font-weight: bolder;
}

.lesson-body {
  position:relative;

  h1 {
    font-size: 20px;
  }

  p {
    margin-bottom: 0.2rem;
  }

  .lesson-level {
    text-align: right;
  }
  .lesson-level span {
    font-weight: bolder;
    font-size: 18px;
  }

  .poem-difficulty-list {
    padding-bottom: 1rem;
    border-bottom: 1px solid #CCCCCC;
  }
}

.lesson-progression{
  p {
    font-size:18px;
  }
}

.lesson-step {
  color: rgba(255, 255, 255, 0.8);
  text-align: center;
  padding: 9px;
  height: 56px;
  width: 56px;
  border-radius: 50%;
  font-size: 26px;

  &.lesson-step.read {
    background-color: #1CB0F6;
    box-shadow:  0 5px 0 0 #1999D6;

    &:active {
      box-shadow:  0 3px 0 0 #1999D6;
      transform: translateY(3px);
    }
  }

  &.lesson-step.listen {
    background-color: #FFD334;
    box-shadow:  0 5px 0 0 #FFC803;

    &:active {
      box-shadow:  0 3px 0 0 #FFC803;
      transform: translateY(3px);
    }
  }

  &.lesson-step.recite {
    background-color: #FC4948;
    box-shadow:  0 5px 0 0 #EA2B2B;
    border: none;

    &:active {
    box-shadow:  0 3px 0 0 #EA2B2B;
    transform: translateY(3px);
    }
  }

}

// .lesson-step:active {
//   box-shadow:  0 2px 0 0 transparent;
//   transform: translateY(3px);
// }



// .lesson-step.listen {
//   background-color: #FFD334;
//   box-shadow:  0 5px 0 0 #FFC803;
// }






.lesson-steps{
  position:relative;
}

.lesson-overall-progress {
  position:absolute;
  top:50%;
  height: 1px;
  width: 68%;
  background-color: rgba(0,0,0,0.08);
  // margin: 0 16%;
  z-index: -1;
}

.lesson-overall-progress-bar {
  height: 4px;
  margin-top: -2px;
  width: 0;
  transition: width 2s ease-in-out;
  background: linear-gradient(90deg, #1CB0F6 0%,#FFD334 50%,#FD4A48 100%);
}

.lesson-progressions {
  padding-top: 1rem;
}

#header_lesson {
  background-image: url("./images/background-rose.jpeg");
  background-size: cover;
  //height:190px;
  height:610px;
}

